# codesmart

./: .gitattributes  .gitignore  .gitmodules  README.md
 hack-a-saurus-2/: build.xml
 hack-a-saurus-2/nbproject/: genfiles.properties
 hack-a-saurus-2/src/: GothamNights.java  Justshutup.java
ACM-ICLPrelims2015/: build.xml
ACM-ICLPrelims2015/nbproject/: genfiles.properties  project.properties  project.xml
AprilLunchtime2015/: AprilLunchtime2015.sln  AprilLunchtime2015.vcxproj
Assignments/Jan-May-2019/Digital_Video_Processing/Assignment1/: BG_subtraction.cpp  CMakeLists.txt  PixelwiseGMM.h  Video.cpp  Video.h
C-Cube2015/: C-Cube2015.ncb
CODE-IT/: CODE-IT.vcxproj  CODE-IT.vcxproj.filters  knapsack.cpp  mario.cpp
CODESHOW2015/: build.xml
Codephrenia2015/: build.xml
Execute2015/: build.xml
FebruaryLunchtime2015/: build.xml
HackerEarth/: build.xml
KJSCECodingChallenge2015/: KJSCECodingChallenge2015.sln  build.xml
MarchChallenge2013_VS/: MarchChallenge2013_VS.sdf  MarchChallenge2013_VS.sln
Prayaas2015/: build.xml
SmartCoders(1.2)/: KeyCode.cpp
Workouts/: .project
Workouts_NB/: build.xml
Workouts_VS/: EnormousInputTest.cs  RedBlackTree.cs  Workouts_VS.csproj
ZedGraph/: UpgradeLog.XML  ZedGraph.sln
ZedGraphTester/: UpgradeLog.htm  UpgradeLog2.htm  ZedGraphTester.vcproj  resource.h  stdafx.cpp  stdafx.h
ZedGraphWrapper/: ErrorCodes.h  Interface.cpp  Interface.h  XYGraph.cpp  XYGraph.h  ZedGraphWrapper.rc  ZedGraphWrapper.vcproj  ZedGraphWrapper.vcxproj  ZedGraphWrapper.vcxproj.filters  ZedGraphWrapper.vsmdi  resource.h
(+1379 files in other folders)
